[package]
name = "mirage"
version = "0.1.1"
authors = ["eomain"]
description = "A library for describing vector graphics"
keywords = ["graphics", "vector", "render", "draw", "object", "shape", "svg"]
edition = "2018"
repository = "https://github.com/eomain/mirage"
license = "MIT"
categories = ["graphics", "visualization", "multimedia::images", "rendering::data-formats"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde-xml-rs = "0.4.0"
image = "0.23.2"
