[package]
name = "mirage"
version = "0.1.1"
authors = ["eomain"]
description = "A library for describing vector graphics"
keywords = ["graphics", "vector", "render", "draw", "object", "shape", "svg"]
edition = "2018"
repository = "https://github.com/eomain/mirage"
license = "MIT"
categories = ["graphics", "visualization", "multimedia::images", "rendering::data-formats"]

[features]
svg = ["image", "serde", "serde-xml-rs"]
raster = ["image"]

[dependencies.serde]
version = "1.0.105"
features = ["derive"]
optional = true

[dependencies.serde-xml-rs]
version = "0.4.0"
optional = true

[dependencies.image]
version = "0.23.2"
optional = true
